tests/parsing/smtlib/v2.6/errors/073_define-fun_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/073_define-fun_unclosed_1.smt2", line 2, character 29-30:
2 | (define-fun foo () bool true _)
                                 ^
Error while parsing a function definition, read the reserved word '_',
      but expected a closing parenthesis.
